// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RevokeAccessButton it renders correct text for Revoke All Access button 1`] = `
<DocumentFragment>
  <button
    class="PodBrowser-revoke-button"
    data-testid="revoke-access-button"
    type="button"
  >
    Revoke All Access
  </button>
</DocumentFragment>
`;

exports[`RevokeAccessButton it renders correct text for drawer button 1`] = `
<DocumentFragment>
  <button
    class="PodBrowser-revoke-button__drawer"
    data-testid="revoke-access-button"
    type="button"
  >
    Remove Access to resource.txt
  </button>
</DocumentFragment>
`;

exports[`RevokeAccessButton it renders correct text for in menu button 1`] = `
<DocumentFragment>
  <button
    class="PodBrowser-button PodBrowser-button--in-menu PodBrowser-revoke-button"
    data-testid="access-details-remove-button"
    type="button"
  >
    <span
      class="PodBrowser-button__text"
    >
      Revoke access
    </span>
  </button>
</DocumentFragment>
`;
